Fix irregular gallery image gap

--- a/components/Gallery.module.css
+++ b/components/Gallery.module.css
@@ -11,7 +11,7 @@
 	margin: 20px;
 	height: 200px;
 	width: auto;
-	max-width: 80%;
+	/* max-width: 80%; */
 	/* flex-shrink: 1; */
 	transition: 200ms ease;
 }
@@ -48,9 +48,9 @@
 
 
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1200px) {
 	.gallery {
-		justify-content: space-around;
+		justify-content: space-between;
 	}
 
 	.image {
